Renamed template files

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,3 +5,11 @@
 nav.top {
     @apply bg-gray-800
 }
+
+div.listview-titles {
+    @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4
+}
+
+div.listview {
+    @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6
+}
