--- a/templates/admin_idtemplates.twig
+++ b/templates/admin_idtemplates.twig
@@ -1,18 +1,17 @@
-{% extends 'main.html' %}
+{% extends 'layout.twig' %}
 
-{% block pid %}id="padmin_idtemplates" data-ajax="false"{%endblock%}
 {% block content %}
 
 <header>
 	<h1>{{ page.glob.l10n.admin_idtemplates }}</h1>
 </header>
-{% include "flash_messages.html" %}
+{% include "flash_messages.twig" %}
 
 <p>{{page.glob.l10n.admin_idtemplates_legend|raw}}</p>
-<ul id="idtemplates" data-role="listview" data-split-icon="delete" data-inset="true">
+<ul id="idtemplates">
 {% for template in templates %}
 	<li>
-		<a class="template"  data-template="{{template.name}}">
+		<a class="template">
 			<h2>
 				<span class="template-name">{{template.name}}</span>
 				<span> </span>
