--- a/templates/admin_version.twig
+++ b/templates/admin_version.twig
@@ -1,10 +1,9 @@
-{% extends 'main.html' %}
+{% extends 'layout.twig' %}
 
-{% block pid %}id="padmin_version"{%endblock%}
 {% block content %}
 
 <h1>{{ page.glob.l10n.admin_check_version }}</h1>
-{% include "flash_messages.html" %}
+{% include "flash_messages.twig" %}
 
 <p {% if versionClass != '' %}class="{{versionClass}}"{% endif %}>
 	{{versionAnswer|raw}}.
