--- a/templates/author_detail.twig
+++ b/templates/author_detail.twig
@@ -1,10 +1,10 @@
-{% extends 'main.html' %}
+{% extends 'layout.twig' %}
 
 {% block pid %}id="pauthor_detail"{%endblock%}
 
 
 {% block content %}
-{% include "flash_messages.html" %}
+{% include "flash_messages.twig" %}
 <section class="author-detail-row">
 	<header>
 
