--- a/templates/logout.twig
+++ b/templates/logout.twig
@@ -1,6 +1,4 @@
-{% extends 'main.html' %}
-
-{% block pid %}id="logout"{%endblock%}
+{% extends 'layout.twig' %}
 
 {% block headerlinks %}{% endblock %}
 
