--- a/templates/title_detail.twig
+++ b/templates/title_detail.twig
@@ -1,6 +1,4 @@
-{% extends 'main.html' %}
-
-{% block pid %}id="ptitle_detail"{%endblock%}
+{% extends 'layout.twig' %}
 
 {% block content %}
 <section class="title_detail">	
