--- a/templates/authors.twig
+++ b/templates/authors.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
+    <div class="listview">
         {% for author in authors %}
             {% if author.initial != "" %}
                 <li data-role="list-divider"> {{ author.initial }}</li>
