--- a/templates/tag_detail.twig
+++ b/templates/tag_detail.twig
@@ -1,10 +1,9 @@
-{% extends 'main.html' %}
-
+{% extends 'layout.twig' %}
 
 {% block content %}
-<section class="series_detail row">
+<section class="tag_detail row">
 	<header>
-		<h1>{{page.glob.l10n.booksbyseries}} "{{ series.name }}":</h1>
+		<h1>{{page.glob.l10n.booksbytag}} "{{ tag.name }}":</h1>
 	</header>
 	<ul data-role="listview">
 		{% for book in books %}
