--- a/templates/tags.twig
+++ b/templates/tags.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
+    <div class="listview">
         {% for tag in tags %}
             {% if tag.initial != "" %}
                 <li data-role="list-divider"> {{ tag.initial }}</li>
@@ -15,20 +15,4 @@
             {% endif %}
         {% endfor %}
     </div>
-{% endblock %}
-
-
-{% block leftpanel %}
-<section data-role="panel" data-display="overlay" data-position="left" id="tags_options_panel">
-    <h2>{{page.glob.l10n.pagination_search}}</h2>
-
-    <form action="{{page.rot}}/search/"
-          method="get" class="ui-bar-a">
-        <div data-role="fieldcontain" class="ui-hide-label">
-            <label for="search">{{page.glob.l10n.pagination_search_lbl}}</label>
-            <input type="search" name="search" id="search" value="{{search}}"
-                   placeholder="{{page.glob.l10n.pagination_search_ph}}" autofocus=""true"/>
-        </div>
-    </form>
-</section>
 {% endblock %}
