--- a/templates/titles.twig
+++ b/templates/titles.twig
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block content %}
-	<div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6">
+	<div class="listview-titles">
 		{% for book in books %}
 			{% if book.initial != "" %}
 				<li data-role="list-divider"> {{ book.initial }}</li>
