--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -2,8 +2,19 @@
 @tailwind components;
 @tailwind utilities;
 
-nav.top {
-    @apply bg-gray-800
+.body {
+    @apply bg-manatee-50 /*dark:bg-manatee-900*/
+}
+div.wrapper {
+    @apply md:container
+}
+
+header {
+   @apply flex items-center justify-between h-1/2
+}
+
+.top-link {
+    @apply bg-manatee-900 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
 }
 
 div.listview-titles {
