--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -13,14 +13,43 @@
     <script src="{{page.rot}}/js/alpine-2.7.3.min.js" defer></script>
     <script src="{{page.rot}}/js/main.js" defer></script>
 </head>
-<body>
-<div>
-    <nav class=top">
-        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+<body class="body">
+    <div class="wrapper">
+        <header>
+            <h1 class="text-left text-md leading-tight text-gray-900">
+                {{ page.title }}
+            </h1>
+            <div class="md:block">
+                <div class="ml-4 flex items-end md:ml-6">
+                    <a href="{{ page.rot }}/search/" class="top-link" title="{{ page.glob.l10n.pagination_search }}" title="{{ page.glob.l10n.pagination_search }}">
+                        <span class="sr-only">{{ page.glob.l10n.pagination_search }}</span>
+                        {# Heroicon name: search #}
+                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                        </svg>
+                    </a>
+                    <a href="{{ page.rot }}/admin/" class="top-link" title="{{ page.glob.l10n.admin_short }}">
+                        <span class="sr-only">{{ page.glob.l10n.admin_short }}</span>
+                        {# Heroicon name: adjustments #}
+                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+                        </svg>
+                    </a>
+                    <a type="button" href="{{ page.rot }}/logout/" class="top-link" title="{{ page.glob.l10n.logout }}">
+                        <span class="sr-only">{{ page.glob.l10n.logout }}</span>
+                        {# Heroicon name: logout #}
+                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                        </svg>
+                    </a>
+                </div>
+            </div>
+        </header>
+        <nav>
             <div class="flex items-center justify-between h-16">
                 <div class="flex items-center">
                     <div class="flex-shrink-0">
-                        <img class="h-8 w-8" src="{{page.rot}}/bbs-icon.png" alt="BicBucStriim icon">
+                        <img class="h-8 w-8" src="{{page.rot}}/bbs-icon.png" alt="BicBucStriim">
                     </div>
                     <div class="md:block">
                         <div class="ml-10 flex items-baseline space-x-4">
@@ -32,57 +61,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden md:block">
-                    <div class="ml-4 flex items-center md:ml-6">
-                        <a href="{{ page.rot }}/search/" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-                            <span class="sr-only">Search</span>
-                            {# Heroicon name: search #}
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                            </svg>
-                        </a>
-                        <a href="{{ page.rot }}/admin/" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-                            <span class="sr-only">Change settings</span>
-                            {# Heroicon name: adjustments #}
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
-                            </svg>
-                        </a>
-                        <a type="button" href="{{ page.rot }}/logout/" class="bg-gray-800 p-1 rounded-full text-gray-400 hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white">
-                            <span class="sr-only">Logout</span>
-                            {# Heroicon name: logout #}
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-                            </svg>
-                        </a>
+            </div>
+        </nav>
+
+        <main>
+            <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+                <div class="px-4 py-6 sm:px-0">
+                    <div class="border-4 border-dashed border-gray-200 rounded-lg">
+                        {% block content %}{% endblock %}
                     </div>
                 </div>
-
             </div>
-        </div>
-    </nav>
-
-    <header class="bg-white shadow">
-        <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-            <h1 class="text-3xl font-bold leading-tight text-gray-900">
-                {{ page.title }}
-            </h1>
-        </div>
-    </header>
-    <main>
-        <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
-            <div class="px-4 py-6 sm:px-0">
-                <div class="border-4 border-dashed border-gray-200 rounded-lg">
-                    {% block content %}{% endblock %}
-                </div>
+        </main>
+        <footer>
+            <div class="max-w-2xl mx-auto py-2 sm:px-6 lg:px-8">
+                <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
             </div>
-        </div>
-    </main>
-    <footer>
-        <div class="max-w-2xl mx-auto py-2 sm:px-6 lg:px-8">
-            <p><a href="https://github.com/rvolz/BicBucStriim">BicBucStriim {{page.version}}</a>  &copy; 2012-{{"now"|date('Y')}} Rainer Volz</p>
-        </div>
-    </footer>
-</div>
+        </footer>
+    </div>
 </body>
 </html>
