--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -3,11 +3,36 @@
 @tailwind utilities;
 
 .body {
-    @apply bg-manatee-50 /*dark:bg-manatee-900*/
+    @apply bg-manatee-50 /* TODO enable dark:bg-manatee-900 */
 }
 div.wrapper {
-    @apply md:container
+    @apply px-1 pt-0.5 md:container md:mx-auto
 }
+
+header {
+    @apply flex items-center justify-between bg-manatee-200
+}
+
+nav {
+    @apply bg-manatee-200
+}
+
+footer {
+    @apply bg-manatee-200 flex items-center
+}
+
+.input {
+    @apply h-6 text-sm px-1 py-0
+}
+
+footer {
+    @apply py-1 sm:px-6 lg:px-8
+}
+
+.top-link {
+    @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+}
+
 
 .stats-cell {
     @apply py-4 px-4 bg-manatee-200 border rounded border-chocolate-400
@@ -19,21 +44,6 @@ div.wrapper {
     @apply text-blush-600 text-4xl font-bold text-center
 }
 
-header {
-    @apply flex items-center justify-between h-1/2 py-1 sm:px-6 lg:px-8 bg-chocolate-200
-}
-
-nav {
-    @apply py-1 sm:px-6 lg:px-8 bg-tangerine-200
-}
-
-footer {
-    @apply py-1 sm:px-6 lg:px-8 bg-tangerine-200
-}
-
-.top-link {
-    @apply bg-tangerine-600 p-1 rounded-full text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
-}
 
 div.listview-titles {
     @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4
