--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -16,51 +16,82 @@
 <body class="body">
     <div class="wrapper">
         <header>
-            <h1 class="text-left text-md leading-tight text-gray-900">
+            <h1 class="text-left">
                 {{ page.h1 }}
             </h1>
-            <div class="md:block">
-                <div class="ml-4 flex m-4 items-end md:ml-6">
-                    <a href="{{ page.rot }}/search/" class="top-link" title="{{ page.glob.l10n.pagination_search }}" title="{{ page.glob.l10n.pagination_search }}">
-                        <span class="sr-only">{{ page.glob.l10n.pagination_search }}</span>
-                        {# Heroicon name: search #}
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
-                        </svg>
-                    </a>
-                    <a href="{{ page.rot }}/admin/" class="top-link" title="{{ page.glob.l10n.admin_short }}">
-                        <span class="sr-only">{{ page.glob.l10n.admin_short }}</span>
-                        {# Heroicon name: adjustments #}
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
-                        </svg>
-                    </a>
-                    <a type="button" href="{{ page.rot }}/logout/" class="top-link" title="{{ page.glob.l10n.logout }}">
-                        <span class="sr-only">{{ page.glob.l10n.logout }}</span>
-                        {# Heroicon name: logout #}
-                        <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
-                        </svg>
-                    </a>
-                </div>
+            <div class="ml-4 flex items-end">
+                <a href="{{ page.rot }}/" class="top-link" title="{{ page.glob.l10n.home }}" title="{{ page.glob.l10n.home }}">
+                    <span class="sr-only">{{ page.glob.l10n.home }}</span>
+                    {# Heroicon name: home #}
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"></path></svg>
+                </a>
+                <a href="{{ page.rot }}/search/" class="top-link" title="{{ page.glob.l10n.pagination_search }}" title="{{ page.glob.l10n.pagination_search }}">
+                    <span class="sr-only">{{ page.glob.l10n.pagination_search }}</span>
+                    {# Heroicon name: search #}
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                    </svg>
+                </a>
+                <a href="{{ page.rot }}/admin/" class="top-link" title="{{ page.glob.l10n.admin_short }}">
+                    <span class="sr-only">{{ page.glob.l10n.admin_short }}</span>
+                    {# Heroicon name: adjustments #}
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6V4m0 2a2 2 0 100 4m0-4a2 2 0 110 4m-6 8a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4m6 6v10m6-2a2 2 0 100-4m0 4a2 2 0 110-4m0 4v2m0-6V4" />
+                    </svg>
+                </a>
+                <a href="{{ page.rot }}/logout/" class="top-link" title="{{ page.glob.l10n.logout }}">
+                    <span class="sr-only">{{ page.glob.l10n.logout }}</span>
+                    {# Heroicon name: logout #}
+                    <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17 16l4-4m0 0l-4-4m4 4H7m6 4v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1" />
+                    </svg>
+                </a>
             </div>
         </header>
-        <nav class="py-1 sm:px-6 lg:px-8">
-            <div class="flex items-center justify-between h-16">
-                <div class="flex items-center">
-                    <div class="flex-shrink-0">
-                        <img class="h-8 w-8" src="{{page.rot}}/bbs-icon.png" alt="BicBucStriim">
-                    </div>
-                    <div class="md:block">
-                        <div class="ml-10 flex items-baseline space-x-4">
-                            <a href="{{page.rot}}/" class="px-3 py-2 rounded-md text-sm font-medium text-white bg-gray-900">{{page.glob.l10n.home}}</a>
-                            <a href="{{page.rot}}/titles/" class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">{{page.glob.l10n.titles}}</a>
-                            <a href="{{page.rot}}/authors/" class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">{{page.glob.l10n.authors}}</a>
-                            <a href="{{page.rot}}/tags/" class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">{{page.glob.l10n.tags}}</a>
-                            <a href="{{page.rot}}/series/" class="px-3 py-2 rounded-md text-sm font-medium text-gray-300 hover:text-white hover:bg-gray-700">{{page.glob.l10n.series}}</a>
-                        </div>
-                    </div>
-                </div>
+        <nav class="py-1">
+            <script type="application/javascript">
+                async function visit(val) {
+                    switch(val) {
+                        case '1': Turbolinks.visit('/titles/', { action: "replace" }); break;
+                        case '2': Turbolinks.visit('/authors/', { action: "replace" }); break;
+                        case '3': Turbolinks.visit('/series/', { action: "replace" }); break;
+                        case '4': Turbolinks.visit('/tags/', { action: "replace" }); break;
+                        default: return;
+                    }
+                }
+            </script>
+            <div class="flex items-center justify-center"
+                 x-data="{ selected: 0 }"
+                 x-init="$watch('selected', () => {visit(selected)})"
+            >
+                <select name="topic" id="topic-select" class="input" x-model="selected">
+                    <option value="0"> Select an area ... </option>
+                    <option value="1">{{page.glob.l10n.titles}}</option>
+                    <option value="2">{{page.glob.l10n.authors}}</option>
+                    <option value="3">{{page.glob.l10n.series}}</option>
+                    <option value="4">{{page.glob.l10n.tags}}</option>
+                </select>
+                <input type="search" name="filter" id="filter-input" value="" placeholder="Filter ..." class="input">
+            </div>
+            <div class="flex items-center justify-around  h-8">
+                <button type="submit" class="top-link">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M11 19l-7-7 7-7m8 14l-7-7 7-7"></path></svg>
+                </button>
+                <button type="submit" class="top-link">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 19l-7-7 7-7"></path></svg>
+                </button>
+                <select name="sort" id="sort-select" class="input">
+                    <option value="1">Alpha</option>
+                    <option value="2">{{ page.glob.l10n.admin_tts_by_pubdate }}</option>
+                    <option value="3">{{ page.glob.l10n.admin_tts_by_timestamp }}</option>
+                    <option value="4">{{ page.glob.l10n.admin_tts_by_lastmodified }}</option>
+                </select>
+                <button type="submit" class="top-link">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5l7 7-7 7"></path></svg>
+                </button>
+                <button type="submit" class="top-link">
+                    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 5l7 7-7 7M5 5l7 7-7 7"></path></svg>
+                </button>
             </div>
         </nav>
 
